# easy-nurbs

./: CMakeLists.txt  README.md
src/: cnurb.cpp  cnurb.h  cpmesh.cpp  cpmesh.h  cpoint.cpp  cpoint.h  easy_nurbs.h.in  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  teapot.h
src/shader/: passThrough.vert
